--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "turnos",
   "version": "0.1.0",
   "private": true,
+  "hompage": "https://elBotija.github.io/turnos",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
